--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+  background-color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
+h1 {
+  color: grey;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+}
 
+.maindiv {
+  background-color: white;
+  color: black;
+  width: 300px;
+  padding: 20px;
+  border-radius: 25px;
+  margin: auto;
+  align: center;
+}
+footer {
+  margin-top: 40px;
 
+  text-align: center;
+}
