--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   background-color: black;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+  line-height: 2;
 }
 h1 {
   color: grey;
@@ -16,10 +17,19 @@ h1 {
   padding: 20px;
   border-radius: 25px;
   margin: auto;
-  align: center;
+}
+.inputItem {
+  display: inline;
+}
+.grid {
+  display: grid;
+  grid-template-columns: 4fr 8fr;
 }
 footer {
   margin-top: 40px;
 
   text-align: center;
+}
+.number {
+  background-color: yellow;
 }
